--- a/src/html/SearchWebview.html
+++ b/src/html/SearchWebview.html
@@ -15,42 +15,67 @@
     </style>
 </head>
 <body>
-    <input type="text" id="searchInput" placeholder="Search in Excel files..." />
+    <div class="input-group">
+        <div class="input-label">Search Content (搜索内容)</div>
+        <input type="text" id="searchInput" placeholder="Search content..." />
+    </div>
 
     <label class="checkbox-container">
         <input type="checkbox" id="WholeMatchCellCheckbox" />
-        Whole Word Match 全字匹配
+        <span>Whole Word Match (全字匹配)</span>
     </label>
 
     <label class="checkbox-container">
         <input type="checkbox" id="CaseMatchCellCheckbox" />
-        Case Sensitivity 大小写匹配
+        <span>Case Sensitivity (区分大小写)</span>
     </label>
 
-    <button id="searchBtn">Search</button>
+    <label class="checkbox-container">
+        <input type="checkbox" id="UseRegexCheckbox" />
+        <span>Use Regex (使用正则表达式)</span>
+    </label>
+
+    <div class="input-group">
+        <div class="input-label">File Name Pattern (文件名过滤)</div>
+        <input type="text" id="filePatternInput" placeholder="e.g. Motive..." />
+    </div>
+
+    <label class="checkbox-container">
+        <input type="checkbox" id="OnlyActiveFileCheckbox" />
+        <span>Search Only Currently Open Files (仅搜当前打开的文件)</span>
+    </label>
+
+    <div class="button-container">
+        <button id="searchBtn">SEARCH</button>
+    </div>
 
     <script>
         const vscode = acquireVsCodeApi();
         const searchBtn = document.getElementById('searchBtn');
         const searchInput = document.getElementById('searchInput');
+        const filePatternInput = document.getElementById('filePatternInput'); // 新增
         const WholeMatchCellCheckbox = document.getElementById('WholeMatchCellCheckbox');
-        const CaseMatchCellCheckbox = document.getElementById('CaseMatchCellCheckbox')
+        const CaseMatchCellCheckbox = document.getElementById('CaseMatchCellCheckbox');
+        const OnlyActiveFileCheckbox = document.getElementById('OnlyActiveFileCheckbox');
+        const UseRegexCheckbox = document.getElementById('UseRegexCheckbox');
+
         searchBtn.addEventListener('click', () => {
-            const val = searchInput.value;
-            const isWholeExactMatch = WholeMatchCellCheckbox?.checked ?? false ; // 获取复选框状态
-            const isCaseExactMatch = CaseMatchCellCheckbox?.checked ?? false; // 获取复选框状态
-            
             vscode.postMessage({ 
                 command: 'search', 
-                text: val,
-                isWholeExactMatch: isWholeExactMatch,
-                isCaseExactMatch: isCaseExactMatch,
+                targetVal: searchInput.value,           // 搜索内容
+                filePattern: filePatternInput.value,    // 文件名过滤
+                isWholeExactMatch: WholeMatchCellCheckbox?.checked ?? false,
+                isCaseExactMatch: CaseMatchCellCheckbox?.checked ?? false,
+                bOnlyActiveFiles: OnlyActiveFileCheckbox?.checked ?? false,
+                bUseRegex: UseRegexCheckbox?.checked ?? false,
             });
         });
 
-        // 支持回车搜索
-        searchInput.addEventListener('keydown', (e) => {
-            if (e.key === 'Enter') searchBtn.click();
+        // 支持所有输入框的回车搜索
+        [searchInput, filePatternInput].forEach(el => {
+            el.addEventListener('keydown', (e) => {
+                if (e.key === 'Enter') searchBtn.click();
+            });
         });
     </script>
 </body>
